--- a/package.json
+++ b/package.json
@@ -18,12 +18,24 @@
   },
   "homepage": "https://github.com/isragh/API-isra#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^3.5.3",
+    "helmet": "^3.23.3",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
+    "node": "^10.24.1",
+    "nodemailer": "^6.7.6",
     "nodemon": "^2.0.18",
     "slugify": "^1.6.5",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
